added random forest with 85% train accuracy

--- a/ICML.ipynb
+++ b/ICML.ipynb
@@ -104,19 +104,52 @@
    "outputs": [],
    "source": [
     "j=0\n",
-    "X=np.zeros((cancer_image.shape[0],8))\n",
+    "data=np.zeros((cancer_image.shape[0],8+1))\n",
+    "m=0\n",
     "for i in cancer_image:\n",
     "    \n",
     "    \n",
     "    \n",
     "    lbp_features=LBP_features(i)\n",
     "    \n",
-    "    X[j,:]=lbp_features\n",
+    "    data[j,0:8]=lbp_features\n",
+    "    data[j,8]=label_id[j]\n",
     "    \n",
     "    j=j+1\n",
-    "X.shape\n",
-    "X    "
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import svm\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.datasets import make_classification\n",
+    "r=[]\n",
+    "X=np.float64(data[:,0:8])\n",
+    "Y=np.float64(label_id)\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i in range(1,400):\n",
+    "    clf = RandomForestClassifier(n_estimators=2, max_depth=i,\n",
+    "                             random_state=0)\n",
+    "    clf.fit(X, Y)\n",
+    "    r.append(clf.score(X,Y))\n",
+    "    \n",
+    "plt.plot(r)\n",
+    "#clf.fit(X_train,y_train) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
